--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
   keycloak_postgres_data: {}
 
 services:
-  postgres:
+  postgres-keycloak:
     image: postgres:10-alpine
     container_name: postgres
     volumes:
@@ -27,6 +27,6 @@ services:
     ports:
       - 8088:8080
     volumes:
-      - ./rokr-theme:/opt/jboss/keycloak/themes/
+      - ./rokr-theme:/opt/jboss/keycloak/themes/rokr-theme
     depends_on:
-      - postgres
+      - postgres-keycloak
