ROKR-808: changing theme.properties

--- a/rokr-theme/login/theme.properties
+++ b/rokr-theme/login/theme.properties
@@ -1,3 +1,6 @@
 parent=base
-styles=css/styles.css
-scripts=ts/script.ts
+import=common/keycloak
+
+styles=css/default.css css/login.css
+locates=en,es,pt_BR,de,en
+
